--- a/MetaLogic/Foundation.Essential.html
+++ b/MetaLogic/Foundation.Essential.html
@@ -49,13 +49,13 @@
 <li>中文版快速参考: <a href="https://www.yuque.com/ocau/hset/ti2u9nvok36hmibm">Agda 泛等基础</a></li>
 </ul>
 <h2 id="基础概念">基础概念</h2>
-<p>以下统一列出元语言中可以谈论的基础概念, 正篇中将直接使用它们而不再额外定义. 简单来说, 它们只不过是对 <a href="https://github.com/agda/cubical">Cubical 标准库</a> 的重新封装, 以满足我们的特殊需求: 尽可能使用命题相等 (Propositional Equality) 而不是道路 (Path), 以方便我们的形式化, 因为我们不涉及高阶同伦概念.</p>
-<pre class="Agda"><a id="1610" class="Keyword">module</a> <a id="1617" href="Foundation.Essential.html" class="Module">Foundation.Essential</a> <a id="1638" class="Keyword">where</a>
+<p>以下统一列出元语言中可以谈论的基础概念, 后篇中将直接使用 (<code>import</code>) 它们而不再额外定义. 为了节省篇幅, 本篇也只是 <code>import</code> 更底层的已经定义好的模块, 请需要了解细节的读者自己查看<a href="https://github.com/choukh/MetaLogic/tree/main/src/Foundation">源码</a>. 简单来说, 这些模块只不过是对 <a href="https://github.com/agda/cubical">Cubical 标准库</a> 的重新封装, 以满足我们的特殊需求: 尽可能使用命题相等 (Propositional Equality) 而不是道路 (Path), 以方便我们的形式化, 因为我们不涉及高阶同伦概念.</p>
+<pre class="Agda"><a id="1743" class="Keyword">module</a> <a id="1750" href="Foundation.Essential.html" class="Module">Foundation.Essential</a> <a id="1771" class="Keyword">where</a>
 </pre>
 <h3 id="前奏">前奏</h3>
 <p>前奏 (Prelude) 是基础中的基础, 是定义其他基础概念所必须的基础概念, 以至于有些是原始概念, 如道路类型. 这些原始概念具体涉及到 Cubical 类型论的规则, 这里不深入其细节, 而只作为一个黑盒使用.</p>
 <h4 id="内置">内置</h4>
-<pre class="Agda"><a id="1785" class="Keyword">open</a> <a id="1790" class="Keyword">import</a> <a id="1797" href="Foundation.Prelude.Builtin.html" class="Module">Foundation.Prelude.Builtin</a> <a id="1824" class="Keyword">public</a>
+<pre class="Agda"><a id="1918" class="Keyword">open</a> <a id="1923" class="Keyword">import</a> <a id="1930" href="Foundation.Prelude.Builtin.html" class="Module">Foundation.Prelude.Builtin</a> <a id="1957" class="Keyword">public</a>
 </pre>
 <p>内置 (Builtin) 模块主要包括带魔法 (编译器支持) 的一些原始概念, 如宇宙和道路类型等, 以及一些基本数据类型:</p>
 <ul>
@@ -71,9 +71,9 @@
 <li>二元关系 <code>R S : A → B → 𝕋 ℓ</code></li>
 <li>依值类型族 <code>P₂ Q₂ : (x : A) → P x → 𝕋 ℓ</code></li>
 </ul>
-<p>注意当我们说“任意给定”的时候指的是 arbitrary, 而对于 forall, 我们一定会说“所有”或“对任意”. 我们保留“谓词”这个名称给可以证明是命题的一元关系. 最后, 我们约定Σ类型 <code>Σ A (λ x → P)</code>, 即满足 <code>P</code> 的 <code>A</code>, 可以简记为 <code>Σ x ꞉ A ⸴ P</code>, 或者 <code>Σ x ⸴ P</code>.</p>
+<p>注意当我们说“任意给定”的时候指的是 arbitrary, 而对于 forall, 我们一定会说“所有”或“对任意”. 我们保留“谓词”这个名称给可以证明是命题的一元关系. 最后, 我们约定Σ类型 <code>Σ A (λ x → P)</code>, 即满足 <code>P</code> 的 <code>A</code>, 可以简记为 <code>Σ x ꞉ A ， P</code>, 或者 <code>Σ x ， P</code>.</p>
 <h4 id="函数">函数</h4>
-<pre class="Agda"><a id="2510" class="Keyword">open</a> <a id="2515" class="Keyword">import</a> <a id="2522" href="Foundation.Prelude.Function.html" class="Module">Foundation.Prelude.Function</a> <a id="2550" class="Keyword">public</a>
+<pre class="Agda"><a id="2643" class="Keyword">open</a> <a id="2648" class="Keyword">import</a> <a id="2655" href="Foundation.Prelude.Function.html" class="Module">Foundation.Prelude.Function</a> <a id="2683" class="Keyword">public</a>
 </pre>
 <p>前奏中的函数模块主要定义与函数有关的一些便利记法:</p>
 <ul>
@@ -88,7 +88,7 @@
 <li>函数应用 <code>f $ x = f x</code>, 用于当参数本身是个函数应用时省略参数外层的括号</li>
 </ul>
 <h4 id="命题相等">命题相等</h4>
-<pre class="Agda"><a id="2857" class="Keyword">open</a> <a id="2862" class="Keyword">import</a> <a id="2869" href="Foundation.Prelude.Equality.html" class="Module">Foundation.Prelude.Equality</a> <a id="2897" class="Keyword">public</a>
+<pre class="Agda"><a id="2990" class="Keyword">open</a> <a id="2995" class="Keyword">import</a> <a id="3002" href="Foundation.Prelude.Equality.html" class="Module">Foundation.Prelude.Equality</a> <a id="3030" class="Keyword">public</a>
 </pre>
 <p>本模块给出了相等的基本性质:</p>
 <ul>
@@ -117,44 +117,44 @@
 </ul>
 <p>注意 ua 是泛等公理 (univalence axiom) 的缩写, 虽然在 Cubical 中它是定理, 出于历史原因仍记作 ua.</p>
 <h4 id="同伦层级">同伦层级</h4>
-<pre class="Agda"><a id="3742" class="Keyword">open</a> <a id="3747" class="Keyword">import</a> <a id="3754" href="Foundation.Prelude.HLevel.html" class="Module">Foundation.Prelude.HLevel</a> <a id="3780" class="Keyword">public</a>
+<pre class="Agda"><a id="3875" class="Keyword">open</a> <a id="3880" class="Keyword">import</a> <a id="3887" href="Foundation.Prelude.HLevel.html" class="Module">Foundation.Prelude.HLevel</a> <a id="3913" class="Keyword">public</a>
 </pre>
 <p>如果说宇宙层级是类型宇宙 <code>𝕋 ℓ</code> 所具有的一种属性, 那么同伦层级 (hLevel) 则是类型 <code>A : 𝕋 ℓ</code> 所具有的一种属性. 我们只关心同伦层级为 1 和 2 的两种类型.</p>
 <p>同伦层级为 1 的类型叫做命题, 该类类型的任意两个项都可证相等. “类型 <code>A</code> 是命题” 表达为 <code>isProp A</code>. 如所期待的那样, 类型 <code>isProp A</code> 也是一个命题, 即对任意 <code>A : 𝕋 ℓ</code> 可证 <code>isProp (isProp A)</code>. 我们也说 <code>isProp</code> 是一个谓词.</p>
 <p>同伦层级为 2 的类型叫做集合, 该类类型的任意两个项的相等都是命题, 即给定两个项相等的任意两个证明, 这两个证明是相等的. “类型 <code>A</code> 是集合” 表达为 <code>isSet A</code>. 与 <code>isProp</code> 一样, <code>isSet</code> 也是一个谓词. 此外我们有 <code>isProp→isSet</code>, 即任意命题都是集合. 直观上, 由于命题的任意项都相等, 那么这些项之间的相等的方式也应该是相等的, 所以命题也是集合.</p>
 <p>对于嵌套的Π类型, 不管嵌套多少次, 只要最后的目标是命题 (或集合), 那么整个嵌套Π类型也是命题 (或集合). 如果构成Σ类型的两边都是命题 (或集合), 那么这个Σ类型也是命题 (或集合).</p>
 <h4 id="其他">其他</h4>
-<pre class="Agda"><a id="4366" class="Keyword">open</a> <a id="4371" class="Keyword">import</a> <a id="4378" href="Foundation.Prelude.Misc.html" class="Module">Foundation.Prelude.Misc</a> <a id="4402" class="Keyword">public</a>
+<pre class="Agda"><a id="4499" class="Keyword">open</a> <a id="4504" class="Keyword">import</a> <a id="4511" href="Foundation.Prelude.Misc.html" class="Module">Foundation.Prelude.Misc</a> <a id="4535" class="Keyword">public</a>
 </pre>
 <p>为了编码上的方便, 我们经常需要用 Agda 的反射机制定义的宏 <code>declareRecordIsoΣ</code> 将Σ类型与 record 类型相互转化. 我们把具有某种结构的类型宇宙叫做 <code>TypeWithStr</code>, 并用 <code>typ</code> 取得其左边的类型, 用 <code>str</code> 取得其右边的结构.</p>
 <h3 id="逻辑">逻辑</h3>
-<pre class="Agda"><a id="4574" class="Keyword">open</a> <a id="4579" class="Keyword">import</a> <a id="4586" href="Foundation.Logic.html" class="Module">Foundation.Logic</a> <a id="4603" class="Keyword">public</a>
+<pre class="Agda"><a id="4707" class="Keyword">open</a> <a id="4712" class="Keyword">import</a> <a id="4719" href="Foundation.Logic.html" class="Module">Foundation.Logic</a> <a id="4736" class="Keyword">public</a>
 </pre>
 <h3 id="集合">集合</h3>
-<pre class="Agda"><a id="4631" class="Keyword">open</a> <a id="4636" class="Keyword">import</a> <a id="4643" href="Foundation.Set.Powerset.html" class="Module">Foundation.Set.Powerset</a> <a id="4667" class="Keyword">public</a>
+<pre class="Agda"><a id="4764" class="Keyword">open</a> <a id="4769" class="Keyword">import</a> <a id="4776" href="Foundation.Set.Powerset.html" class="Module">Foundation.Set.Powerset</a> <a id="4800" class="Keyword">public</a>
 </pre>
 <h3 id="函数-1">函数</h3>
-<pre class="Agda"><a id="4695" class="Keyword">open</a> <a id="4700" class="Keyword">import</a> <a id="4707" href="Foundation.Function.Bundles.html" class="Module">Foundation.Function.Bundles</a> <a id="4735" class="Keyword">public</a>
-<a id="4742" class="Keyword">open</a> <a id="4747" class="Keyword">import</a> <a id="4754" href="Foundation.Function.Sequance.html" class="Module">Foundation.Function.Sequance</a> <a id="4783" class="Keyword">public</a>
+<pre class="Agda"><a id="4828" class="Keyword">open</a> <a id="4833" class="Keyword">import</a> <a id="4840" href="Foundation.Function.Bundles.html" class="Module">Foundation.Function.Bundles</a> <a id="4868" class="Keyword">public</a>
+<a id="4875" class="Keyword">open</a> <a id="4880" class="Keyword">import</a> <a id="4887" href="Foundation.Function.Sequance.html" class="Module">Foundation.Function.Sequance</a> <a id="4916" class="Keyword">public</a>
 </pre>
 <h3 id="数据类型">数据类型</h3>
-<pre class="Agda"><a id="4813" class="Keyword">open</a> <a id="4818" class="Keyword">import</a> <a id="4825" href="Foundation.Data.Empty.html" class="Module">Foundation.Data.Empty</a> <a id="4847" class="Keyword">public</a>
-<a id="4854" class="Keyword">open</a> <a id="4859" class="Keyword">import</a> <a id="4866" href="Foundation.Data.Unit.html" class="Module">Foundation.Data.Unit</a> <a id="4887" class="Keyword">public</a>
-<a id="4894" class="Keyword">open</a> <a id="4899" class="Keyword">import</a> <a id="4906" href="Foundation.Data.Bool.html" class="Module">Foundation.Data.Bool</a> <a id="4927" class="Keyword">public</a>
-<a id="4934" class="Keyword">open</a> <a id="4939" class="Keyword">import</a> <a id="4946" href="Foundation.Data.Nat.html" class="Module">Foundation.Data.Nat</a> <a id="4966" class="Keyword">public</a>
-<a id="4973" class="Keyword">open</a> <a id="4978" class="Keyword">import</a> <a id="4985" href="Foundation.Data.Sigma.html" class="Module">Foundation.Data.Sigma</a> <a id="5007" class="Keyword">public</a>
-<a id="5014" class="Keyword">open</a> <a id="5019" class="Keyword">import</a> <a id="5026" href="Foundation.Data.Sum.html" class="Module">Foundation.Data.Sum</a> <a id="5046" class="Keyword">public</a>
-<a id="5053" class="Keyword">open</a> <a id="5058" class="Keyword">import</a> <a id="5065" href="Foundation.Data.List.html" class="Module">Foundation.Data.List</a> <a id="5086" class="Keyword">public</a>
-<a id="5093" class="Keyword">open</a> <a id="5098" class="Keyword">import</a> <a id="5105" href="Foundation.Data.Vec.html" class="Module">Foundation.Data.Vec</a> <a id="5125" class="Keyword">public</a>
+<pre class="Agda"><a id="4946" class="Keyword">open</a> <a id="4951" class="Keyword">import</a> <a id="4958" href="Foundation.Data.Empty.html" class="Module">Foundation.Data.Empty</a> <a id="4980" class="Keyword">public</a>
+<a id="4987" class="Keyword">open</a> <a id="4992" class="Keyword">import</a> <a id="4999" href="Foundation.Data.Unit.html" class="Module">Foundation.Data.Unit</a> <a id="5020" class="Keyword">public</a>
+<a id="5027" class="Keyword">open</a> <a id="5032" class="Keyword">import</a> <a id="5039" href="Foundation.Data.Bool.html" class="Module">Foundation.Data.Bool</a> <a id="5060" class="Keyword">public</a>
+<a id="5067" class="Keyword">open</a> <a id="5072" class="Keyword">import</a> <a id="5079" href="Foundation.Data.Nat.html" class="Module">Foundation.Data.Nat</a> <a id="5099" class="Keyword">public</a>
+<a id="5106" class="Keyword">open</a> <a id="5111" class="Keyword">import</a> <a id="5118" href="Foundation.Data.Sigma.html" class="Module">Foundation.Data.Sigma</a> <a id="5140" class="Keyword">public</a>
+<a id="5147" class="Keyword">open</a> <a id="5152" class="Keyword">import</a> <a id="5159" href="Foundation.Data.Sum.html" class="Module">Foundation.Data.Sum</a> <a id="5179" class="Keyword">public</a>
+<a id="5186" class="Keyword">open</a> <a id="5191" class="Keyword">import</a> <a id="5198" href="Foundation.Data.List.html" class="Module">Foundation.Data.List</a> <a id="5219" class="Keyword">public</a>
+<a id="5226" class="Keyword">open</a> <a id="5231" class="Keyword">import</a> <a id="5238" href="Foundation.Data.Vec.html" class="Module">Foundation.Data.Vec</a> <a id="5258" class="Keyword">public</a>
 </pre>
 <h3 id="关系">关系</h3>
-<pre class="Agda"><a id="5153" class="Keyword">open</a> <a id="5158" class="Keyword">import</a> <a id="5165" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="5202" class="Keyword">public</a>
-<a id="5209" class="Keyword">open</a> <a id="5214" class="Keyword">import</a> <a id="5221" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="5259" class="Keyword">public</a>
-<a id="5266" class="Keyword">open</a> <a id="5271" class="Keyword">import</a> <a id="5278" href="Foundation.Relation.Nullary.Discrete.html" class="Module">Foundation.Relation.Nullary.Discrete</a> <a id="5315" class="Keyword">public</a>
+<pre class="Agda"><a id="5286" class="Keyword">open</a> <a id="5291" class="Keyword">import</a> <a id="5298" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="5335" class="Keyword">public</a>
+<a id="5342" class="Keyword">open</a> <a id="5347" class="Keyword">import</a> <a id="5354" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="5392" class="Keyword">public</a>
+<a id="5399" class="Keyword">open</a> <a id="5404" class="Keyword">import</a> <a id="5411" href="Foundation.Relation.Nullary.Discrete.html" class="Module">Foundation.Relation.Nullary.Discrete</a> <a id="5448" class="Keyword">public</a>
 
-<a id="5323" class="Keyword">open</a> <a id="5328" class="Keyword">import</a> <a id="5335" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="5371" class="Keyword">public</a>
-<a id="5378" class="Keyword">open</a> <a id="5383" class="Keyword">import</a> <a id="5390" href="Foundation.Relation.Unary.Enumerable.html" class="Module">Foundation.Relation.Unary.Enumerable</a> <a id="5427" class="Symbol">as</a> <a id="5430" class="Module">E</a> <a id="5432" class="Keyword">public</a>
-<a id="5439" class="Keyword">open</a> <a id="5444" href="Foundation.Relation.Unary.Enumerable.html#2015" class="Module">E.ListView</a> <a id="5455" class="Keyword">public</a>
+<a id="5456" class="Keyword">open</a> <a id="5461" class="Keyword">import</a> <a id="5468" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="5504" class="Keyword">public</a>
+<a id="5511" class="Keyword">open</a> <a id="5516" class="Keyword">import</a> <a id="5523" href="Foundation.Relation.Unary.Enumerable.html" class="Module">Foundation.Relation.Unary.Enumerable</a> <a id="5560" class="Symbol">as</a> <a id="5563" class="Module">E</a> <a id="5565" class="Keyword">public</a>
+<a id="5572" class="Keyword">open</a> <a id="5577" href="Foundation.Relation.Unary.Enumerable.html#2015" class="Module">E.ListView</a> <a id="5588" class="Keyword">public</a>
 </pre>
 <blockquote>
 <p>知识共享许可协议: <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh">CC-BY-NC-SA 4.0</a><br />
