--- a/MetaLogic/Foundation.Essential.html
+++ b/MetaLogic/Foundation.Essential.html
@@ -24,15 +24,25 @@
   <li><a href="#元语言" id="toc-元语言">元语言</a>
   <ul>
   <li><a href="#前言" id="toc-前言">前言</a></li>
-  <li><a href="#基础概念" id="toc-基础概念">基础概念</a>
+  <li><a href="#前奏" id="toc-前奏">前奏</a>
   <ul>
-  <li><a href="#前奏" id="toc-前奏">前奏</a></li>
+  <li><a href="#内置" id="toc-内置">内置</a></li>
+  <li><a href="#函数" id="toc-函数">函数</a></li>
+  <li><a href="#命题相等" id="toc-命题相等">命题相等</a></li>
+  <li><a href="#同伦层级" id="toc-同伦层级">同伦层级</a></li>
+  <li><a href="#其他" id="toc-其他">其他</a></li>
+  </ul></li>
+  <li><a href="#命题" id="toc-命题">命题</a>
+  <ul>
+  <li><a href="#命题截断" id="toc-命题截断">命题截断</a></li>
   <li><a href="#逻辑" id="toc-逻辑">逻辑</a></li>
+  <li><a href="#逻辑等价" id="toc-逻辑等价">逻辑等价</a></li>
+  <li><a href="#命题宇宙" id="toc-命题宇宙">命题宇宙</a></li>
+  </ul></li>
   <li><a href="#集合" id="toc-集合">集合</a></li>
   <li><a href="#函数-1" id="toc-函数-1">函数</a></li>
   <li><a href="#数据类型" id="toc-数据类型">数据类型</a></li>
   <li><a href="#关系" id="toc-关系">关系</a></li>
-  </ul></li>
   </ul></li>
   </ul>
 </nav>
@@ -41,21 +51,20 @@
 <h1 id="元语言">元语言</h1>
 <h2 id="前言">前言</h2>
 <p>我们的研究对象是一阶逻辑等形式语言, 我们将其称为对象语言. 同时, 为了表达有关对象语言的命题和证明, 我们需要一个不同于对象语言的外部语言, 这个外部语言称为元语言. 传统上, 一阶逻辑等的元语言通常采用原始递归算术 (PRA) 等“低级”算术语言. 这主要是出于建立自下而上的逻辑体系以及满足有限主义哲学需求的考虑. 然而, 我们这里并不考虑这些因素, 而是采用一种称为<a href="https://www.bananaspace.org/wiki/%E5%90%8C%E4%BC%A6%E7%B1%BB%E5%9E%8B%E8%AE%BA">同伦类型论 (HoTT)</a> 的“高级”语言作为元语言. 由于 HoTT 是一种更贴近数学实践的形式语言, 我们认为它可以在一定程度上兼顾形式上的严格与表达上的自然, 从而使完全形式化的入门讲义成为可能, 这也是我们的目标.</p>
-<p>需要注意的是, HoTT 实际上是一系列理论的统称, 就像“集合论”有 ZFC, NBG, MK 等等一样. 本文具体使用的 HoTT 叫做 <a href="https://agda.readthedocs.io/en/v2.6.4/language/cubical.html">Cubical Agda</a>. 它非常严格, 以至于可以通过计算机来检查证明语句的正确性. 实际上它就是一种编程语言, 只不过其生态着重于数学证明而非软件应用. 借助 <a href="https://agda.readthedocs.io/en/latest/tools/literate-programming.html">Agda 的文学编程</a> 功能, <a href="https://github.com/choukh/MetaLogic/blob/main/src/Foundation/Essential.lagda.md">本 Markdown 文件</a> 实际上就是 Agda 源码, 可以直接做类型检查, 以检验证明语句的正确性. 基于这一特性, 我们实验性地采用以下编排方式: 自然语言与代码级的形式语言并行使用, 交替排列, 构成双重元语言, 以构筑对象语言. 我们会将 Agda 语句放在代码块中, 而正文的自然语言则可以认为是对这些代码的注释. 我们希望两种元语言可以相互解释, 互为补充.</p>
+<p>需要注意的是, HoTT 实际上是一系列理论的统称, 就像“集合论”有 ZFC, NBG, MK 等等一样. 本文具体使用的 HoTT 叫做 <a href="https://agda.readthedocs.io/en/v2.6.4/language/cubical.html">Cubical Agda</a>. 它非常严格, 以至于可以通过计算机来检查证明语句的正确性. 实际上它就是一种编程语言, 只不过其生态着重于数学证明而非软件应用. 借助 <a href="https://agda.readthedocs.io/en/latest/tools/literate-programming.html">Agda 的文学编程</a> 功能, <a href="https://github.com/choukh/MetaLogic/blob/main/src/Foundation/Essential.lagda.md">本 Markdown 文件</a> 实际上就是 Agda 源码, 可以直接做类型检查, 以检验证明语句的正确性. 基于这一特性, 我们实验性地采用以下编排方式: 非形式的自然语言与代码级的形式语言并行使用, 交替排列, 构成双重元语言, 以构筑对象语言. 我们会将 Agda 语句放在代码块中, 而正文的自然语言则可以认为是对这些代码的注释. 我们希望两种元语言可以相互解释, 互为补充.</p>
 <p>当然, 这要求读者对 HoTT 和 Agda 都有一定的了解. 我们不会在本文中对这些内容进行详细的介绍, 而是假设读者已经具备了一定的基础. 如果读者对 HoTT 和 Agda 还不熟悉, 我们推荐读者阅读以下资料:</p>
 <ul>
 <li>HoTT入门: <a href="https://homotopytypetheory.org/book/">HoTT Book</a></li>
 <li>Agda + 泛等基础入门: <a href="https://www.cs.bham.ac.uk/~mhe/HoTT-UF-in-Agda-Lecture-Notes/">Introduction to Univalent Foundations of Mathematics with Agda</a></li>
 <li>中文版快速参考: <a href="https://www.yuque.com/ocau/hset/ti2u9nvok36hmibm">Agda 泛等基础</a></li>
 </ul>
-<h2 id="基础概念">基础概念</h2>
-<p>以下统一列出元语言中可以谈论的基础概念, 后篇中将直接使用 (<code>import</code>) 它们而不再额外定义. 为了节省篇幅, 本篇也只是 <code>import</code> 更底层的已经定义好的模块, 请需要了解细节的读者自己查看<a href="https://github.com/choukh/MetaLogic/tree/main/src/Foundation">源码</a>. 简单来说, 这些模块只不过是对 <a href="https://github.com/agda/cubical">Cubical 标准库</a> 的重新封装, 以满足我们的特殊需求: 尽可能使用命题相等 (Propositional Equality) 而不是道路 (Path), 以方便我们的形式化, 因为我们不涉及高阶同伦概念.</p>
-<pre class="Agda"><a id="1743" class="Keyword">module</a> <a id="1750" href="Foundation.Essential.html" class="Module">Foundation.Essential</a> <a id="1771" class="Keyword">where</a>
+<p>以下快速复习一遍元语言中可以谈论的基础概念, 后篇中将直接使用 (<code>import</code>) 它们而不再额外定义. 为了节省篇幅, 本篇也只是 <code>import</code> 更底层的已经定义好的模块, 请需要了解细节的读者自己查看<a href="https://github.com/choukh/MetaLogic/tree/main/src/Foundation">源码</a>. 简单来说, 这些模块只不过是对 <a href="https://github.com/agda/cubical">Cubical 标准库</a> 的重新封装, 以满足我们的特殊需求: 尽可能使用命题相等 (Propositional Equality) 而不是道路 (Path), 以方便我们的形式化, 因为我们不涉及高阶同伦概念.</p>
+<pre class="Agda"><a id="1740" class="Keyword">module</a> <a id="1747" href="Foundation.Essential.html" class="Module">Foundation.Essential</a> <a id="1768" class="Keyword">where</a>
 </pre>
-<h3 id="前奏">前奏</h3>
+<h2 id="前奏">前奏</h2>
 <p>前奏 (Prelude) 是基础中的基础, 是定义其他基础概念所必须的基础概念, 以至于有些是原始概念, 如道路类型. 这些原始概念具体涉及到 Cubical 类型论的规则, 这里不深入其细节, 而只作为一个黑盒使用.</p>
-<h4 id="内置">内置</h4>
-<pre class="Agda"><a id="1918" class="Keyword">open</a> <a id="1923" class="Keyword">import</a> <a id="1930" href="Foundation.Prelude.Builtin.html" class="Module">Foundation.Prelude.Builtin</a> <a id="1957" class="Keyword">public</a>
+<h3 id="内置">内置</h3>
+<pre class="Agda"><a id="1913" class="Keyword">open</a> <a id="1918" class="Keyword">import</a> <a id="1925" href="Foundation.Prelude.Builtin.html" class="Module">Foundation.Prelude.Builtin</a> <a id="1952" class="Keyword">public</a>
 </pre>
 <p>内置 (Builtin) 模块主要包括带魔法 (编译器支持) 的一些原始概念, 如宇宙和道路类型等, 以及一些基本数据类型:</p>
 <ul>
@@ -65,15 +74,15 @@
 </ul>
 <p>注意, 对某些相似概念的 Cubical 版本, 我们会在其名字中带上“🧊”, 以示区别. 此外, 我们对符号作如下约定:</p>
 <ul>
-<li>宇宙层级编号 <code>ℓ ℓ′ ℓ″ ℓ‴ ℓ⁗ ℓ₀ ℓ₁ ℓ₂ ℓ₃ ℓ₄ : Level</code></li>
+<li>宇宙层级序号 <code>ℓ ℓ′ ℓ″ ℓ‴ ℓ⁗ ℓ₀ ℓ₁ ℓ₂ ℓ₃ ℓ₄ : Level</code></li>
 <li>任意给定宇宙的类型 <code>A B C D T : 𝕋 ℓ</code></li>
 <li>类型族 / 性质 / 一元关系 <code>P Q : A → 𝕋 ℓ</code></li>
 <li>二元关系 <code>R S : A → B → 𝕋 ℓ</code></li>
 <li>依值类型族 <code>P₂ Q₂ : (x : A) → P x → 𝕋 ℓ</code></li>
 </ul>
-<p>注意当我们说“任意给定”的时候指的是 arbitrary, 而对于 forall, 我们一定会说“所有”或“对任意”. 我们保留“谓词”这个名称给可以证明是命题的一元关系. 最后, 我们约定Σ类型 <code>Σ A (λ x → P)</code>, 即满足 <code>P</code> 的 <code>A</code>, 可以简记为 <code>Σ x ꞉ A ， P</code>, 或者 <code>Σ x ， P</code>.</p>
-<h4 id="函数">函数</h4>
-<pre class="Agda"><a id="2643" class="Keyword">open</a> <a id="2648" class="Keyword">import</a> <a id="2655" href="Foundation.Prelude.Function.html" class="Module">Foundation.Prelude.Function</a> <a id="2683" class="Keyword">public</a>
+<p>注意当我们说“任意给定”的时候指的是 arbitrary, 而对于 forall, 我们一定会说“所有”或“对任意”. 我们保留“谓词”这个名称给可以证明是命题的一元关系. 最后, 我们约定Σ类型 <code>Σ A (λ x → P)</code>, 即满足 <code>P</code> 的 <code>A</code>, 可以简记为 <code>Σ x ꞉ A ， P</code> 或者 <code>Σ x ， P</code>.</p>
+<h3 id="函数">函数</h3>
+<pre class="Agda"><a id="2636" class="Keyword">open</a> <a id="2641" class="Keyword">import</a> <a id="2648" href="Foundation.Prelude.Function.html" class="Module">Foundation.Prelude.Function</a> <a id="2676" class="Keyword">public</a>
 </pre>
 <p>前奏中的函数模块主要定义与函数有关的一些便利记法:</p>
 <ul>
@@ -87,8 +96,8 @@
 <li>参数翻转 <code>flip = λ f x y → f y x</code></li>
 <li>函数应用 <code>f $ x = f x</code>, 用于当参数本身是个函数应用时省略参数外层的括号</li>
 </ul>
-<h4 id="命题相等">命题相等</h4>
-<pre class="Agda"><a id="2990" class="Keyword">open</a> <a id="2995" class="Keyword">import</a> <a id="3002" href="Foundation.Prelude.Equality.html" class="Module">Foundation.Prelude.Equality</a> <a id="3030" class="Keyword">public</a>
+<h3 id="命题相等">命题相等</h3>
+<pre class="Agda"><a id="2982" class="Keyword">open</a> <a id="2987" class="Keyword">import</a> <a id="2994" href="Foundation.Prelude.Equality.html" class="Module">Foundation.Prelude.Equality</a> <a id="3022" class="Keyword">public</a>
 </pre>
 <p>本模块给出了相等的基本性质:</p>
 <ul>
@@ -116,45 +125,58 @@
 <li>同构蕴含相等 <code>ua : A ≅ B → A ≡ B</code></li>
 </ul>
 <p>注意 ua 是泛等公理 (univalence axiom) 的缩写, 虽然在 Cubical 中它是定理, 出于历史原因仍记作 ua.</p>
-<h4 id="同伦层级">同伦层级</h4>
-<pre class="Agda"><a id="3875" class="Keyword">open</a> <a id="3880" class="Keyword">import</a> <a id="3887" href="Foundation.Prelude.HLevel.html" class="Module">Foundation.Prelude.HLevel</a> <a id="3913" class="Keyword">public</a>
+<h3 id="同伦层级">同伦层级</h3>
+<pre class="Agda"><a id="3866" class="Keyword">open</a> <a id="3871" class="Keyword">import</a> <a id="3878" href="Foundation.Prelude.HLevel.html" class="Module">Foundation.Prelude.HLevel</a> <a id="3904" class="Keyword">public</a>
 </pre>
 <p>如果说宇宙层级是类型宇宙 <code>𝕋 ℓ</code> 所具有的一种属性, 那么同伦层级 (hLevel) 则是类型 <code>A : 𝕋 ℓ</code> 所具有的一种属性. 我们只关心同伦层级为 1 和 2 的两种类型.</p>
 <p>同伦层级为 1 的类型叫做命题, 该类类型的任意两个项都可证相等. “类型 <code>A</code> 是命题” 表达为 <code>isProp A</code>. 如所期待的那样, 类型 <code>isProp A</code> 也是一个命题, 即对任意 <code>A : 𝕋 ℓ</code> 可证 <code>isProp (isProp A)</code>. 我们也说 <code>isProp</code> 是一个谓词.</p>
 <p>同伦层级为 2 的类型叫做集合, 该类类型的任意两个项的相等都是命题, 即给定两个项相等的任意两个证明, 这两个证明是相等的. “类型 <code>A</code> 是集合” 表达为 <code>isSet A</code>. 与 <code>isProp</code> 一样, <code>isSet</code> 也是一个谓词. 此外我们有 <code>isProp→isSet</code>, 即任意命题都是集合. 直观上, 由于命题的任意项都相等, 那么这些项之间的相等的方式也应该是相等的, 所以命题也是集合.</p>
 <p>对于嵌套的Π类型, 不管嵌套多少次, 只要最后的目标是命题 (或集合), 那么整个嵌套Π类型也是命题 (或集合). 如果构成Σ类型的两边都是命题 (或集合), 那么这个Σ类型也是命题 (或集合).</p>
-<h4 id="其他">其他</h4>
-<pre class="Agda"><a id="4499" class="Keyword">open</a> <a id="4504" class="Keyword">import</a> <a id="4511" href="Foundation.Prelude.Misc.html" class="Module">Foundation.Prelude.Misc</a> <a id="4535" class="Keyword">public</a>
+<h3 id="其他">其他</h3>
+<pre class="Agda"><a id="4489" class="Keyword">open</a> <a id="4494" class="Keyword">import</a> <a id="4501" href="Foundation.Prelude.Misc.html" class="Module">Foundation.Prelude.Misc</a> <a id="4525" class="Keyword">public</a>
 </pre>
 <p>为了编码上的方便, 我们经常需要用 Agda 的反射机制定义的宏 <code>declareRecordIsoΣ</code> 将Σ类型与 record 类型相互转化. 我们把具有某种结构的类型宇宙叫做 <code>TypeWithStr</code>, 并用 <code>typ</code> 取得其左边的类型, 用 <code>str</code> 取得其右边的结构.</p>
+<h2 id="命题">命题</h2>
+<h3 id="命题截断">命题截断</h3>
+<pre class="Agda"><a id="4706" class="Keyword">open</a> <a id="4711" class="Keyword">import</a> <a id="4718" href="Foundation.Prop.Truncation.html" class="Module">Foundation.Prop.Truncation</a> <a id="4745" class="Keyword">public</a>
+</pre>
 <h3 id="逻辑">逻辑</h3>
-<pre class="Agda"><a id="4707" class="Keyword">open</a> <a id="4712" class="Keyword">import</a> <a id="4719" href="Foundation.Logic.html" class="Module">Foundation.Logic</a> <a id="4736" class="Keyword">public</a>
+<pre class="Agda"><a id="4773" class="Keyword">open</a> <a id="4778" class="Keyword">import</a> <a id="4785" href="Foundation.Prop.Logic.html" class="Module">Foundation.Prop.Logic</a> <a id="4807" class="Keyword">public</a>
 </pre>
-<h3 id="集合">集合</h3>
-<pre class="Agda"><a id="4764" class="Keyword">open</a> <a id="4769" class="Keyword">import</a> <a id="4776" href="Foundation.Set.Powerset.html" class="Module">Foundation.Set.Powerset</a> <a id="4800" class="Keyword">public</a>
+<h4 id="非截断">非截断</h4>
+<h4 id="析取">析取</h4>
+<h4 id="存在量化">存在量化</h4>
+<h3 id="逻辑等价">逻辑等价</h3>
+<pre class="Agda"><a id="4867" class="Keyword">open</a> <a id="4872" class="Keyword">import</a> <a id="4879" href="Foundation.Prop.Iff.html" class="Module">Foundation.Prop.Iff</a> <a id="4899" class="Keyword">public</a>
 </pre>
-<h3 id="函数-1">函数</h3>
-<pre class="Agda"><a id="4828" class="Keyword">open</a> <a id="4833" class="Keyword">import</a> <a id="4840" href="Foundation.Function.Bundles.html" class="Module">Foundation.Function.Bundles</a> <a id="4868" class="Keyword">public</a>
-<a id="4875" class="Keyword">open</a> <a id="4880" class="Keyword">import</a> <a id="4887" href="Foundation.Function.Sequance.html" class="Module">Foundation.Function.Sequance</a> <a id="4916" class="Keyword">public</a>
+<h3 id="命题宇宙">命题宇宙</h3>
+<pre class="Agda"><a id="4929" class="Keyword">open</a> <a id="4934" class="Keyword">import</a> <a id="4941" href="Foundation.Prop.Universe.html" class="Module">Foundation.Prop.Universe</a> <a id="4966" class="Keyword">public</a>
 </pre>
-<h3 id="数据类型">数据类型</h3>
-<pre class="Agda"><a id="4946" class="Keyword">open</a> <a id="4951" class="Keyword">import</a> <a id="4958" href="Foundation.Data.Empty.html" class="Module">Foundation.Data.Empty</a> <a id="4980" class="Keyword">public</a>
-<a id="4987" class="Keyword">open</a> <a id="4992" class="Keyword">import</a> <a id="4999" href="Foundation.Data.Unit.html" class="Module">Foundation.Data.Unit</a> <a id="5020" class="Keyword">public</a>
-<a id="5027" class="Keyword">open</a> <a id="5032" class="Keyword">import</a> <a id="5039" href="Foundation.Data.Bool.html" class="Module">Foundation.Data.Bool</a> <a id="5060" class="Keyword">public</a>
-<a id="5067" class="Keyword">open</a> <a id="5072" class="Keyword">import</a> <a id="5079" href="Foundation.Data.Nat.html" class="Module">Foundation.Data.Nat</a> <a id="5099" class="Keyword">public</a>
-<a id="5106" class="Keyword">open</a> <a id="5111" class="Keyword">import</a> <a id="5118" href="Foundation.Data.Sigma.html" class="Module">Foundation.Data.Sigma</a> <a id="5140" class="Keyword">public</a>
-<a id="5147" class="Keyword">open</a> <a id="5152" class="Keyword">import</a> <a id="5159" href="Foundation.Data.Sum.html" class="Module">Foundation.Data.Sum</a> <a id="5179" class="Keyword">public</a>
-<a id="5186" class="Keyword">open</a> <a id="5191" class="Keyword">import</a> <a id="5198" href="Foundation.Data.List.html" class="Module">Foundation.Data.List</a> <a id="5219" class="Keyword">public</a>
-<a id="5226" class="Keyword">open</a> <a id="5231" class="Keyword">import</a> <a id="5238" href="Foundation.Data.Vec.html" class="Module">Foundation.Data.Vec</a> <a id="5258" class="Keyword">public</a>
+<h2 id="集合">集合</h2>
+<pre class="Agda"><a id="4993" class="Keyword">open</a> <a id="4998" class="Keyword">import</a> <a id="5005" href="Foundation.Set.Powerset.html" class="Module">Foundation.Set.Powerset</a> <a id="5029" class="Keyword">public</a>
 </pre>
-<h3 id="关系">关系</h3>
-<pre class="Agda"><a id="5286" class="Keyword">open</a> <a id="5291" class="Keyword">import</a> <a id="5298" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="5335" class="Keyword">public</a>
-<a id="5342" class="Keyword">open</a> <a id="5347" class="Keyword">import</a> <a id="5354" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="5392" class="Keyword">public</a>
-<a id="5399" class="Keyword">open</a> <a id="5404" class="Keyword">import</a> <a id="5411" href="Foundation.Relation.Nullary.Discrete.html" class="Module">Foundation.Relation.Nullary.Discrete</a> <a id="5448" class="Keyword">public</a>
+<h2 id="函数-1">函数</h2>
+<pre class="Agda"><a id="5056" class="Keyword">open</a> <a id="5061" class="Keyword">import</a> <a id="5068" href="Foundation.Function.Bundles.html" class="Module">Foundation.Function.Bundles</a> <a id="5096" class="Keyword">public</a>
+<a id="5103" class="Keyword">open</a> <a id="5108" class="Keyword">import</a> <a id="5115" href="Foundation.Function.Sequance.html" class="Module">Foundation.Function.Sequance</a> <a id="5144" class="Keyword">public</a>
+</pre>
+<h2 id="数据类型">数据类型</h2>
+<pre class="Agda"><a id="5173" class="Keyword">open</a> <a id="5178" class="Keyword">import</a> <a id="5185" href="Foundation.Data.Empty.html" class="Module">Foundation.Data.Empty</a> <a id="5207" class="Keyword">public</a>
+<a id="5214" class="Keyword">open</a> <a id="5219" class="Keyword">import</a> <a id="5226" href="Foundation.Data.Unit.html" class="Module">Foundation.Data.Unit</a> <a id="5247" class="Keyword">public</a>
+<a id="5254" class="Keyword">open</a> <a id="5259" class="Keyword">import</a> <a id="5266" href="Foundation.Data.Bool.html" class="Module">Foundation.Data.Bool</a> <a id="5287" class="Keyword">public</a>
+<a id="5294" class="Keyword">open</a> <a id="5299" class="Keyword">import</a> <a id="5306" href="Foundation.Data.Nat.html" class="Module">Foundation.Data.Nat</a> <a id="5326" class="Keyword">public</a>
+<a id="5333" class="Keyword">open</a> <a id="5338" class="Keyword">import</a> <a id="5345" href="Foundation.Data.Sigma.html" class="Module">Foundation.Data.Sigma</a> <a id="5367" class="Keyword">public</a>
+<a id="5374" class="Keyword">open</a> <a id="5379" class="Keyword">import</a> <a id="5386" href="Foundation.Data.Sum.html" class="Module">Foundation.Data.Sum</a> <a id="5406" class="Keyword">public</a>
+<a id="5413" class="Keyword">open</a> <a id="5418" class="Keyword">import</a> <a id="5425" href="Foundation.Data.List.html" class="Module">Foundation.Data.List</a> <a id="5446" class="Keyword">public</a>
+<a id="5453" class="Keyword">open</a> <a id="5458" class="Keyword">import</a> <a id="5465" href="Foundation.Data.Vec.html" class="Module">Foundation.Data.Vec</a> <a id="5485" class="Keyword">public</a>
+</pre>
+<h2 id="关系">关系</h2>
+<pre class="Agda"><a id="5512" class="Keyword">open</a> <a id="5517" class="Keyword">import</a> <a id="5524" href="Foundation.Relation.Nullary.Negation.html" class="Module">Foundation.Relation.Nullary.Negation</a> <a id="5561" class="Keyword">public</a>
+<a id="5568" class="Keyword">open</a> <a id="5573" class="Keyword">import</a> <a id="5580" href="Foundation.Relation.Nullary.Decidable.html" class="Module">Foundation.Relation.Nullary.Decidable</a> <a id="5618" class="Keyword">public</a>
+<a id="5625" class="Keyword">open</a> <a id="5630" class="Keyword">import</a> <a id="5637" href="Foundation.Relation.Nullary.Discrete.html" class="Module">Foundation.Relation.Nullary.Discrete</a> <a id="5674" class="Keyword">public</a>
 
-<a id="5456" class="Keyword">open</a> <a id="5461" class="Keyword">import</a> <a id="5468" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="5504" class="Keyword">public</a>
-<a id="5511" class="Keyword">open</a> <a id="5516" class="Keyword">import</a> <a id="5523" href="Foundation.Relation.Unary.Enumerable.html" class="Module">Foundation.Relation.Unary.Enumerable</a> <a id="5560" class="Symbol">as</a> <a id="5563" class="Module">E</a> <a id="5565" class="Keyword">public</a>
-<a id="5572" class="Keyword">open</a> <a id="5577" href="Foundation.Relation.Unary.Enumerable.html#2015" class="Module">E.ListView</a> <a id="5588" class="Keyword">public</a>
+<a id="5682" class="Keyword">open</a> <a id="5687" class="Keyword">import</a> <a id="5694" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="5730" class="Keyword">public</a>
+<a id="5737" class="Keyword">open</a> <a id="5742" class="Keyword">import</a> <a id="5749" href="Foundation.Relation.Unary.Enumerable.html" class="Module">Foundation.Relation.Unary.Enumerable</a> <a id="5786" class="Symbol">as</a> <a id="5789" class="Module">E</a> <a id="5791" class="Keyword">public</a>
+<a id="5798" class="Keyword">open</a> <a id="5803" href="Foundation.Relation.Unary.Enumerable.html#2090" class="Module">E.ListView</a> <a id="5814" class="Keyword">public</a>
 </pre>
 <blockquote>
 <p>知识共享许可协议: <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh">CC-BY-NC-SA 4.0</a><br />
