--- a/MetaLogic/Foundation.Logic.html
+++ b/MetaLogic/Foundation.Logic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Foundation.Logic</title><link rel="stylesheet" href="Agda.css"><script type="text/javascript" src="highlight-hover.js"></script></head><body><pre class="Agda"><a id="1" class="Keyword">module</a> <a id="8" href="Foundation.Logic.html" class="Module">Foundation.Logic</a> <a id="25" class="Keyword">where</a>
+<html><head><meta charset="utf-8"><title>Foundation.Logic</title><link rel="stylesheet" href="Agda.css"><script type="text/javascript" src="highlight-hover.js"></script></head><body><pre class="Agda"><a id="1" class="Keyword">module</a> <a id="8" href="Foundation.Prop.html" class="Module">Foundation.Logic</a> <a id="25" class="Keyword">where</a>
 
-<a id="32" class="Keyword">open</a> <a id="37" class="Keyword">import</a> <a id="44" href="Foundation.Logic.Basic.html" class="Module">Foundation.Logic.Basic</a> <a id="67" class="Keyword">public</a>
-<a id="74" class="Keyword">open</a> <a id="79" class="Keyword">import</a> <a id="86" href="Foundation.Logic.Iff.html" class="Module">Foundation.Logic.Iff</a> <a id="107" class="Keyword">public</a>
-<a id="114" class="Keyword">open</a> <a id="119" class="Keyword">import</a> <a id="126" href="Foundation.Logic.Prop.html" class="Module">Foundation.Logic.Prop</a> <a id="148" class="Keyword">public</a>
+<a id="32" class="Keyword">open</a> <a id="37" class="Keyword">import</a> <a id="44" href="Foundation.Prop.Logic.html" class="Module">Foundation.Prop.Logic</a> <a id="67" class="Keyword">public</a>
+<a id="74" class="Keyword">open</a> <a id="79" class="Keyword">import</a> <a id="86" href="Foundation.Prop.Iff.html" class="Module">Foundation.Prop.Iff</a> <a id="107" class="Keyword">public</a>
+<a id="114" class="Keyword">open</a> <a id="119" class="Keyword">import</a> <a id="126" href="Foundation.Prop.Universe.html" class="Module">Foundation.Prop.Universe</a> <a id="148" class="Keyword">public</a>
 </pre></body></html>
