--- a/MetaLogic/Foundation.Essential.html
+++ b/MetaLogic/Foundation.Essential.html
@@ -307,7 +307,7 @@
 </pre>
 <p>我们把函数 <code>ℕ → A</code> 称为无穷序列 <code>InfSeq</code>, 它有 “希尔伯特旅馆”操作 <code>_∷ₙ_</code>.</p>
 <h3 id="子空间">子空间</h3>
-<pre class="Agda"><a id="10912" class="Keyword">open</a> <a id="10917" class="Keyword">import</a> <a id="10924" href="Foundation.Function.SubSpace.html" class="Module">Foundation.Function.SubSpace</a> <a id="10953" class="Keyword">public</a>
+<pre class="Agda"><a id="10912" class="Keyword">open</a> <a id="10917" class="Keyword">import</a> <a id="10924" href="Foundation.Function.SubSpaces.html" class="Module">Foundation.Function.SubSpaces</a> <a id="10953" class="Keyword">public</a>
 </pre>
 <h4 id="单射">单射</h4>
 <h4 id="满射">满射</h4>
