--- a/MetaLogic/Foundation.Relation.Unary.Countable.html
+++ b/MetaLogic/Foundation.Relation.Unary.Countable.html
@@ -2,7 +2,7 @@
 <html><head><meta charset="utf-8"><title>Foundation.Relation.Unary.Countable</title><link rel="stylesheet" href="Agda.css"><script type="text/javascript" src="highlight-hover.js"></script></head><body><pre class="Agda"><a id="1" class="Keyword">module</a> <a id="8" href="Foundation.Relation.Unary.Countable.html" class="Module">Foundation.Relation.Unary.Countable</a> <a id="44" class="Keyword">where</a>
 
 <a id="51" class="Keyword">open</a> <a id="56" class="Keyword">import</a> <a id="63" href="Foundation.Prelude.html" class="Module">Foundation.Prelude</a>
-<a id="82" class="Keyword">open</a> <a id="87" class="Keyword">import</a> <a id="94" href="Foundation.Function.SubSpace.html" class="Module">Foundation.Function.SubSpace</a>
+<a id="82" class="Keyword">open</a> <a id="87" class="Keyword">import</a> <a id="94" href="Foundation.Function.SubSpaces.html" class="Module">Foundation.Function.SubSpaces</a>
 <a id="123" class="Keyword">open</a> <a id="128" class="Keyword">import</a> <a id="135" href="Foundation.Prop.Truncation.html" class="Module">Foundation.Prop.Truncation</a>
 
 <a id="countable"></a><a id="163" href="Foundation.Relation.Unary.Countable.html#163" class="Function">countable</a> <a id="173" class="Symbol">:</a> <a id="175" href="Agda.Primitive.html#388" class="Primitive">𝕋</a> <a id="177" href="Foundation.Prelude.Builtin.html#772" class="Generalizable">ℓ</a> <a id="179" class="Symbol">→</a> <a id="181" href="Agda.Primitive.html#388" class="Primitive">𝕋</a> <a id="183" class="Symbol">_</a>
