--- a/MetaLogic/Foundation.Essential.html
+++ b/MetaLogic/Foundation.Essential.html
@@ -283,7 +283,7 @@ theorem_name = proof_term</code></pre>
 </pre>
 <p>单元类型 <code>⊤</code> 只有一个构造子 <code>tt</code>, 所以它只有一个项, 也就是说它是恒真的命题. 单元类型 <code>⊤</code> 是命题 (<code>isProp⊤</code>), 也是集合 (<code>isSet⊤</code>). 单元类型 <code>⊤</code> 位于 <code>𝕋₀</code>, 但我们还有一个宇宙多态版的单元类型 <code>⊤* : 𝕋 ℓ</code>, 它也是命题 (<code>isProp⊤*</code>), 也是集合 (<code>isSet⊤*</code>).</p>
 <h3 id="集合-1">集合</h3>
-<p>集合数据类型有可数多个, 我们主要关心的是布尔类型 <code>𝔹</code> 和自然数类型 <code>ℕ</code>, 它们分别具有基数 <span class="math inline">2</span> 和 <span class="math inline">\aleph_0</span>. 注意这里使用了 <span class="math inline">\LaTeX</span>, 它们是元元语言, 后面也一样.</p>
+<p>集合数据类型有可数多个, 我们主要关心的是布尔类型 <code>𝔹</code> 和自然数类型 <code>ℕ</code>, 它们分别具有基数 <span class="math inline">2</span> 和 <span class="math inline">\aleph_0</span>. 注意这里使用了 <span class="math inline">\LaTeX</span>, 仅限于本篇, 它们是元元语言.</p>
 <h4 id="布尔类型">布尔类型</h4>
 <pre class="Agda"><a id="9602" class="Keyword">open</a> <a id="9607" class="Keyword">import</a> <a id="9614" href="Foundation.Data.Bool.html" class="Module">Foundation.Data.Bool</a> <a id="9635" class="Keyword">public</a>
 </pre>
